<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >


    <TextView
        android:id="@+id/snoozeSetTimeTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="Set time:" />
    <EditText
        android:id="@+id/inputHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"
        android:hint="How many hours?" />
    <EditText
        android:id="@+id/inputMinute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginTop="5dp"
        android:hint="How many minutes?" />
    <Button
        android:id="@+id/btnSnooze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:text="pause scan" />

</LinearLayout>