<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ToggleButton
        android:id="@+id/show_scanning_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableStart="@drawable/check"
        android:textOff="@string/notscanning"
        android:textOn="@string/scanning"/>
</RelativeLayout>