<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="alarm">Alarm</string>
    <string name="app_name">TradeTracker</string>
    <string name="hotstock">Hot Stocks</string>
    <string name="addstock">Add Stock</string>
    <string name="addcrypto">Add Crypto</string>
    <string name="moar">More on notification</string>
    <string name="showstox">Show Stocks</string>
    <string name="shownotif">Show Notification</string>
    <string name="stopnotif">Stop Notification</string>
    <string name="unused">Placeholder</string>
    <string name="allie5">Alert in 5 Seconds</string>
    <string name="fivepass">Five Seconds Have Passed</string>
    <string name="alert">Alert</string>
    <string name="timesup">Time\'s Up!</string>
    <string name="alnew">Alert: new message</string>
    <string name="newmsg">New message</string>
    <string name="msg">Message</string>
    <string name="choose1">Choose one of your stocks</string>
    <string name="chooselim">Choose a stock to delete</string>
    <string name="numdeleted">The stock \"%1$s\" has been deleted</string>
    <string name="delfail">Deletion attempt fail</string>
    <string name="youchose">You chose</string>
    <string name="failempty">DB query failed; stock list is empty</string>
    <string name="fail2add">SQLiteDatabase error, could not add row</string>
    <string name="fail2edit">SQLiteDatabase error, could not edit row</string>
    <string name="addsuccess">Successfully added</string>
    <string name="editsuccess">Successfully edited</string>
    <string name="targetprice">Target price</string>
    <string name="tickername">Ticker name</string>
    <string name="callme">Phone call</string>
    <string name="above">Above</string>
    <string name="below">Below</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="snooze">Snooze</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="addstockcrypto">Add stock or crypto</string>
    <string name="scanning">Now scanning</string>
    <string name="notscanning">Not scanning</string>
    <string name="delete">Delete</string>
    <string name="title_activity_add_stock">Add stock</string>
    <string name="title_activity_add_crypto">Add crypto</string>
    <string name="title_activity_edit_stock">Editing stock/crypto \"%1$s\"</string>
    <string name="stocknoexist">The stock \"%1$s\" does not exist.</string>
    <string name="NaN">\"%1$s\" is not a number.</string>
    <string name="invalid_entry">Invalid entry - must include a number.</string>
    <string name="scan_pausing">Scan pausing…</string>
    <string name="confirm">Confirm</string>
    <string name="areyousure">Are you sure you want to delete row %1$d?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deletesuccess">Successfully deleted it.</string>
    <string name="deletefailure">Could not delete it.</string>
    <string name="oknodelete">OK, nothing was deleted.</string>
    <string name="onlysnoozewhenscanning">I can only snooze when scanning.</string>
    <string name="alreadysnoozing">I am already snoozing.</string>
    <string name="notsnoozing">Not snoozing.</string>
    <string name="snoozingfor" tools:ignore="PluralsCandidate">I will snooze for %1$d milliseconds.</string>
    <string name="snoozedfor">I snoozed for %1$d / %2$d ms.</string>
    <string name="snoozeremain">%1$d / %2$d ms of snooze remaining.</string>
    <string name="appearance">Appearance</string>
    <string name="updates">Updates</string>
    <string name="notifications">Notifications</string>
    <string name="name">Name</string>
    <string name="edit">Edit</string>
    <string name="uninitialized">Uninitialized</string>
    <string name="vibration">Vibration</string>
    <string name="vibwhen">Vibrate when notifying</string>
    <string name="notifringtone">Notification ringtone</string>
    <string name="whichsound">Which sound?</string>
    <string name="gridlayout">GridLayout</string>
    <string name="layoutsummary">LinearLayout is default</string>
    <string name="stockupdtitle">Update interval (ms)</string>
    <string name="stockupdsummary">How often to check for stock updates</string>
    <string name="stockupddlgmsg">How many millisecond interval?</string>
    <string name="undo_string">Undo</string>
    <string name="notUpdatedRecently">not updated recently</string>
    <string name="rowStockAndAlarm">%1$s %2$s %3$s</string>
    <string name="rowCurrentPrice">%2$s</string>

    <!-- Settings preference keys -->
    <string name="gridlayout_key">gridlayout</string>
    <string name="stockupdate_key">stock-upd-interval</string>
    <string name="notification_sound_key">which-sound</string>
    <string name="vibrate_key">vibrate</string>

    <!-- Things which should not be hardcoded. -->
    <string name="tickerRoseDroppedMsg">tickerRoseDroppedMsg</string>
    <string name="tickerTargetPrice">tickerTargetPrice</string>
    <string name="aboveBelow">aboveBelow</string>
    <string name="title_activity_error_handling">Serious Error</string>

</resources>
