<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.advent.tradetracker.viewmodel.AddEditStockActivity"
    tools:showIn="@layout/activity_add_stock">

    <TextView
        android:id="@+id/targetHelper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tickerPrice"
        android:layout_alignBottom="@+id/tickerPrice"
        android:layout_alignStart="@+id/tickerHelper"
        android:text="OK"
        android:textColor="@android:color/holo_green_dark" />

    <EditText
        android:id="@+id/tickerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:hint="@string/tickername"
        android:inputType="textCapCharacters" />


    <EditText
        android:id="@+id/tickerPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tickerName"
        android:layout_below="@+id/tickerName"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:hint="@string/targetprice"
        android:inputType="numberDecimal" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/rbAbove"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tickerPrice">

        <RadioButton
            android:id="@+id/rbAbove"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/above" />

        <RadioButton
            android:id="@+id/rbBelow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/below" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/phoneCallCB"
        android:layout_width="139dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/delbtn"
        android:layout_marginEnd="51dp"
        android:text="@string/callme"
        android:visibility="invisible" />

    <Button
        android:id="@+id/delbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/tickerPrice"
        android:layout_marginBottom="21dp"
        android:text="@string/delete" />

    <TextView
        android:id="@+id/tickerHelper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tickerName"
        android:layout_alignBottom="@+id/tickerName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp"
        android:text="OK"
        android:textColor="@android:color/holo_green_dark" />


</android.widget.RelativeLayout>