<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_add_box" android:id="@+id/addstockorcrypto"
        android:title="@string/addstockcrypto" app:showAsAction="ifRoom" >
        <menu>
            <item android:icon="@drawable/ic_library_add_black" android:id="@+id/action_add_stock" android:title="@string/addstock" />
            <item android:icon="@drawable/ic_toll_black" android:id="@+id/action_add_crypto" android:title="@string/addcrypto" />
        </menu>
    </item>
    <item
        android:id="@+id/action_snooze"
        android:icon="@drawable/ic_notifications_paused"
        android:title="@string/snooze"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/show_scanning"
        android:enabled="true"
        android:title="@string/uninitialized"
        android:checkable="true"
        android:visible="true"
        app:actionLayout="@layout/show_scanning_switch"
        app:showAsAction="always" />

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

</menu>